# agentlens

./: .dockerignore  .env.example  .gitignore  Dockerfile.server  Dockerfile.ui  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf
backend/: .env.example  pyproject.toml  run.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: router.py  stats.py  traces.py
backend/app/models/: __init__.py  db.py  event.py  trace.py
backend/app/repositories/: __init__.py  base.py  file.py  memory.py  sqlalchemy_repo.py
backend/app/services/: __init__.py  stats_service.py  trace_service.py
backend/tests/: conftest.py  gen_placeholder_screenshots.py  manual_middleware_test.py  manual_summarization_real.py  manual_summarization_test.py  test_api_traces.py  test_file_repo.py  test_memory_repo.py  test_models.py  test_trace_service.py
client/: pyproject.toml
client/agentlens_cb/: __init__.py  callback.py  client.py  lens.py  logger_handler.py  middleware_registry.py  models.py
client/tests/: test_callback.py
docs/: AI-Agent接入说明.md  开发环境启动.md  架构说明.md  部署说明.md
docs/plans/: 2026-07-04-langchain-trace-logger.md  2026-07-04-middleware-tracking.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CallTree.tsx  EventCard.tsx  EventTimeline.tsx  JsonViewer.tsx  MessageFlow.tsx  Sidebar.tsx  StatsPanel.tsx  TraceDetailHeader.tsx  TraceListTable.tsx
(+12 files in other folders)
