[project]
name = "agentlens-cb"
version = "0.6.0"
description = "AgentLens: LangChain/LangGraph callback handler that pushes agent traces to the AgentLens server"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentlens_cb*"]
